# PhysicsSim

./: .gitignore  CMakeLists.txt  README.md  circleFragment.frag  circleVertex.vert  glmatrix.c  graphics.c  graphics.h  main.c  physics.c  physics.h
include/: graphics.h  physics.h
src/: graphics.c  main.c  physics.c
